--- a/web/public/index.html
+++ b/web/public/index.html
@@ -26,6 +26,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <style>
+    body,
+    html {
+      height: 100%;
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body>
